# cancer-prediction

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-and-publish.yml  documentation.yml  pre-commit.yml  tests.yml
cancer-prediction/cancer_model/: index.html
cancer-prediction/config/: index.html
cancer-prediction/streamlit_app/: index.html
cancer_prediction/: cancer_model.py  streamlit_app.py
cancer_prediction/cli/: app.py
docs/: index.md
tests/: test_CancerModel.py
