[tool.poetry]
name = "cancer-prediction"
version = "0.1.1"
description = "A basic model to predict cancerous tumors based on certain properties."
authors = ["Ryan Daniels"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "cancer_prediction"}]
homepage = "https://github.com/rkdan/cancer-prediction"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.1"
scikit-learn = "1.4.1.post1"
matplotlib = "3.8.3"
numpy = "1.26.4"
streamlit = "1.31.1"
typer = "0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.9.0"
pre-commit = "^3.6.2"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}

[tool.poetry.scripts]
cancer-prediction = "cancer_prediction.cli:app"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
